# ir-2025A

./: .gitignore  README.md
notebooks/: 01busquedabasica.ipynb  02matriztfidf.ipynb  03similitudcoseno.ipynb  04bm25.ipynb  05preprocesamiento.ipynb  05preprocesamiento2.ipynb  06embeddings.ipynb  08vectordb.ipynb  09api.ipynb  09apiusingirbook.ipynb  11rag_conversacional.ipynb  12webcrawling.ipynb  12webscrapping.ipynb  13langchain.ipynb  clase23jun.ipynb  examen2bim.ipynb
proyecto/: .gitignore  README.md  pyproject.toml
proyecto/backend/: .gitignore  requirements.txt
proyecto/backend/src/: main.py
proyecto/backend/src/ir/: router.py
proyecto/data/corpus/: captions.txt
proyecto/frontend/: .htaccess  index.html  manifest.appcache
proyecto/frontend/css/: app.css  materialdesignicons.min.css
proyecto/src/: api.py  main.py
proyecto/src/actuator/: router.py
